# VidGenie

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  PROJECT_CONTEXT.md  README.md  build.rs
.github/workflows/: release.yml
examples/: caption_demo.json  double_image_asset.json  image.json  local_files.json  luma_matte_demo.json  shape_demo.json  single_image.json  transform_demo.json  transition_fade_test.json
plans/: subtitle.md
src/: helper.rs  lib.rs
src/cli/: Cargo.toml
src/common/: Cargo.toml
src/common/src/: lib.rs  structs.rs
src/common/src/asset/: asset.rs  image.rs  mod.rs  video.rs
src/examples/: gl.rs  gst.rs
src/gl/src/: error.rs  lib.rs  program.rs  texture.rs
src/vg-cli/: Cargo.toml
src/vg-cli/src/: lib.rs
src/vg-common/: Cargo.toml
src/vg-common/src/: clip.rs  lib.rs  structs.rs
src/vg-common/src/asset/: asset.rs  image.rs  mod.rs  video.rs
src/vg-gl/: Cargo.toml
src/vg-gl/src/: buffer.rs  error.rs  framebuffer.rs  lib.rs  macros.rs  program.rs  quad.rs  renderbuffer.rs  renderer.rs  shader.rs  texture.rs  transformer.rs  vertex_array.rs
src/vg-gl/src/shader/: fragment.glsl  fragment_luma.glsl  vertex.glsl
src/vg-gst/: Cargo.toml
src/vg-gst/src/: gs_video.rs  lib.rs
src/vg-video/: Cargo.toml
src/vg-video/src/: lib.rs  video.rs  video_encoder.rs
src/vg-video/src/asset/: asset.rs  image.rs  mod.rs  shape.rs  video.rs
src/vg-video/src/overlay/: caption_overlay.rs  mod.rs
src/vg-video/src/render/: mod.rs  shape_texture.rs  structs.rs
src/vg-video/src/request/: caption.rs  clip.rs  mod.rs  structs.rs  transform.rs
src/vg-video/src/text/: measure.rs  mod.rs  rasterize.rs  split.rs
