[package]
name = "vidgenie"
version = "0.1.0"
edition = "2021"
default-run = "vidgenie"

[workspace]
members = [
    "src/cli"
]

[workspace.dependencies]
gstreamer = "0.20.0"
gstreamer-base = "0.20.0"
gstreamer-app = "0.20.0"
gstreamer-gl = "0.20.0"
gstreamer-gl-egl = "0.20.0"
gstreamer-gl-wayland = "0.20.0"
gstreamer-gl-x11 = "0.20.0"
gstreamer-audio = "0.20.0"
gstreamer-video = "0.20.0"
anyhow = "1.0"
derive_more = "0.99.5"
futures = "0.3"
image = "0.24.5"
gl = "0.14.0"
glfw = "0.51.0"
glutin = { version = "0.29" }
termion = { version = "2" }
once_cell = "1.0"
thiserror = "1.0.38"

[workspace.build-dependencies]
gl_generator = { version = "0.14" }

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
