[package]
name = "vg-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "vidgenie"

[[bin]]
name = "vidgenie"
path = "src/bin/vidgenie.rs"

[dependencies]
anyhow = "1.0.69"
clap = { version = "3.1", features = ["derive"] }
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
vg-common = { path = "../vg-common" }
vg-gst = { path = "../vg-gst" }
vg-video = { path = "../vg-video" }
