[package]
name = "vg-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "vidgenie"

[[bin]]
name = "vidgenie"
path = "src/bin/vidgenie.rs"

[dependencies]
anyhow = "1.0.69"
colors-transform = "0.2.11"
clap = { version = "3.1", features = ["derive"] }
env_logger = "0.10.0"
gl = "0.14.0"
glutin = { version = "0.29" }
log = "0.4.17"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
vg-common = { path = "../vg-common" }
vg-gl = { path = "../vg-gl" }
vg-gst = { path = "../vg-gst" }
vg-video = { path = "../vg-video" }
