[package]
name = "vg-gl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
image = "0.24.5"
gl = "0.14.0"
log = "0.4.17"
nalgebra = "0.32.2"
nalgebra-glm = "0.18.0"
thiserror = "1.0.38"

[target.'cfg(not(target_os = "linux"))'.dependencies]
glutin = "0.29"

[target.'cfg(target_os = "linux")'.dependencies]
khronos-egl = { version = "6.0", features = ["dynamic"] }
