[package]
name = "vg-video"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstreamer = "0.20.0"
gstreamer-base = "0.20.0"
gstreamer-app = "0.20.0"
gstreamer-gl = "0.20.0"
gstreamer-gl-egl = "0.20.0"
gstreamer-gl-wayland = "0.20.0"
gstreamer-gl-x11 = "0.20.0"
gstreamer-audio = "0.20.0"
gstreamer-video = "0.20.0"
