[package]
name = "vg-video"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
colors-transform = "0.2.11"
image = "0.24.5"
reqwest = { version = "0.11.14", features = ["blocking"] }
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
gl = "0.14.0"
log = "0.4.17"
rusttype = "0.9"
unicode-linebreak = "0.1"
unicode-segmentation = "1.10"
vg-gl = { path = "../vg-gl" }
vg-gst = { path = "../vg-gst" }
